Refractoring methods for order service